--- a/index.html
+++ b/index.html
@@ -510,6 +510,27 @@
                     </div>
                 </div>
 
+                <div class="content-with-image reverse">
+                    <div class="image-container" onclick="openModal(this)">
+                        <img src="image14.jpg" alt="Clinical Training">
+                        <p class="image-caption">Observing medical procedures and equipment</p>
+                    </div>
+                    <div class="image-container" onclick="openModal(this)">
+                        <img src="image15.jpg" alt="Team Learning">
+                        <p class="image-caption">Collaborative learning with fellow scholars</p>
+                    </div>
+                </div>
+
+                <div class="full-width-image">
+                    <img src="image11.jpg" alt="Health Education Presentation" onclick="openModal(this)">
+                    <p class="image-caption">Presenting on eating disorders and health awareness at UCI MedAcademy</p>
+                </div>
+
+                <div class="full-width-image">
+                    <img src="image18.jpg" alt="UCI MedAcademy" onclick="openModal(this)">
+                    <p class="image-caption">UCI MedAcademy experience with fellow scholars</p>
+                </div>
+
                 <!-- Hospital Volunteering -->
                 <h3 style="color: #2c5aa0; font-size: 2rem; margin-top: 3rem;">June 2024-Present: Clinical Experience</h3>
                 <div class="experience-card">
@@ -522,6 +543,11 @@
                         <li>Provided compassionate patient and family interactions</li>
                         <li>Earned Certificate of Volunteer Experience for 100+ hours</li>
                     </ul>
+                </div>
+
+                <div class="full-width-image">
+                    <img src="image17.jpg" alt="Hospital Volunteering" onclick="openModal(this)">
+                    <p class="image-caption">Volunteering at OSF Saint Anthony Medical Center</p>
                 </div>
 
                 <!-- Hospice Care -->
@@ -551,31 +577,29 @@
                     </ul>
                 </div>
 
-                <!-- CNA Training -->
-                <h3 style="color: #2c5aa0; font-size: 2rem; margin-top: 3rem;">Fall 2025-Spring 2026: Professional Certification</h3>
-                <div class="content-with-image">
-                    <div>
-                        <div class="experience-card">
-                            <h3>Certified Nursing Assistant Training</h3>
-                            <div class="date">Fall 2025 – Spring 2026</div>
-                            <div class="location">Harper College, Palatine, IL</div>
-                            <ul>
-                                <li>Enrolled in CNA 111 Nursing Assistant Training (dual-credit program)</li>
-                                <li>Mastering patient care skills: vital signs monitoring, mobility assistance, infection control</li>
-                                <li>Scheduled for 40 clinical hours at local nursing home in CNA 112</li>
-                                <li>Preparing for Illinois Nurse Aide Competency Exam</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="image-container" onclick="openModal(this)">
-                        <img src="image14.jpg" alt="Clinical Simulation">
-                        <p class="image-caption">Clinical simulation training with medical equipment</p>
-                    </div>
+                <div class="experience-card">
+                    <h3>Tutor and Grader (Paid Position)</h3>
+                    <div class="date">October 2023 - November 2024</div>
+                    <div class="location">Eye Level Learning, Schaumburg, IL</div>
+                    <ul>
+                        <li>Graded math and reading assignments for elementary students, ensuring accuracy and consistency</li>
+                        <li>Tutored young learners in foundational skills, adjusting methods to match individual learning styles</li>
+                        <li>Built strong communication and mentoring skills through regular student interaction</li>
+                    </ul>
                 </div>
 
-                <div class="full-width-image">
-                    <img src="image15.jpg" alt="Patient Care Training" onclick="openModal(this)">
-                    <p class="image-caption">Collaborative learning during patient care simulation</p>
+                <!-- CNA Training -->
+                <h3 style="color: #2c5aa0; font-size: 2rem; margin-top: 3rem;">Fall 2025-Spring 2026: Professional Certification</h3>
+                <div class="experience-card">
+                    <h3>Certified Nursing Assistant Training</h3>
+                    <div class="date">Fall 2025 – Spring 2026</div>
+                    <div class="location">Harper College, Palatine, IL</div>
+                    <ul>
+                        <li>Enrolled in CNA 111 Nursing Assistant Training (dual-credit program)</li>
+                        <li>Mastering patient care skills: vital signs monitoring, mobility assistance, infection control</li>
+                        <li>Scheduled for 40 clinical hours at local nursing home in CNA 112</li>
+                        <li>Preparing for Illinois Nurse Aide Competency Exam</li>
+                    </ul>
                 </div>
             </section>
 
@@ -650,15 +674,9 @@
                             <ul>
                                 <li>1st Place, Healthy Living (State Champion) - Qualified for International Leadership Conference</li>
                                 <li>Competed at 2025 HOSA International Leadership Conference among 12,900 global competitors</li>
-                                <li>Presented on eating disorders awareness and healthy living initiatives</li>
                             </ul>
                         </div>
                     </div>
-                </div>
-
-                <div class="full-width-image">
-                    <img src="image11.jpg" alt="HOSA Presentation" onclick="openModal(this)">
-                    <p class="image-caption">Presenting on eating disorders and health awareness at HOSA competition</p>
                 </div>
 
                 <div class="experience-card">
@@ -691,7 +709,6 @@
 
                 <h3 style="margin-top: 2rem; color: #2c5aa0;">Community Service</h3>
                 <ul style="margin-left: 2rem; margin-top: 1rem;">
-                    <li><strong>Eye Level Learning</strong> - Tutor and Grader for elementary students</li>
                     <li><strong>Feed My Starving Children</strong> - Meal packing volunteer (2023-2024)</li>
                     <li><strong>60010 Feeds Kids Campaign</strong> - Hunger relief volunteer (2024)</li>
                     <li><strong>Animal House Shelter</strong> - Dog walking and socialization (2024)</li>
