--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 </div>
 
                 <div class="full-width-image">
-                    <img src="image18.jpg" alt="UCI MedAcademy" onclick="openModal(this)">
+                    <img src="image18uci.jpg" alt="UCI MedAcademy" onclick="openModal(this)">
                     <p class="image-caption">UCI MedAcademy experience with fellow scholars</p>
                 </div>
 
